--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,7 +5,7 @@ github_repo_root_url: https://github.com/Jarvis-Consulting-Group/jarvis_data_eng
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: I am a Computer Science Engineering graduate from Visvesvaraya Technological University (VTU) with a post-graduate Web Design and development certificate from Conestoga College. Implemented Object-Oriented Programming methodologies in Java Programming, developing, debugging, and testing code using IntelliJ IDEA. I worked as a Junior Web Developer at a startup where I Developed Prototypes and wireframes using Photoshop and Figma and translated the designs into code with VS-Code. I have good experience working in Scrum and Agile environments. Ability to self-motivate with a strong desire to learn, adapt and master new technologies and work in a team and self-directed settings.
+summary: I am a Computer Science Engineering graduate from Visvesvaraya Technological University (VTU) with a post-graduate Web Design and development certificate from Conestoga College. Implemented Object-Oriented Programming methodologies in Java Programming, developing, debugging, and testing code using IntelliJ IDEA. I worked as a Web Developer intern at a startup where I Developed Prototypes and wireframes using Photoshop and Figma and translated the designs into code with VS-Code. I have good experience working in Scrum and Agile environments. Ability to self-motivate with a strong desire to learn, adapt and master new technologies and work in a team and self-directed settings.
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -65,14 +65,14 @@ jarvis_projects:
 # Feel free to add more projects
 highlighted_projects:
     #project name
-  - name: "Web app for resturant"
+  - name: "Weather App"
     #URL is optional
-    git_url: "https://github.com/jarviscanada/jarvis_profile_builder"
+    git_url: ""
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
-  - name: "Machine Learning"
+    description: Designed UI with React.js in VS-Code. Using an application programming interface (API) to develop this app. Using an API to access weather data. Allows you to make a search for the current weather by simply typing cities. This application displays the weather forecast using an external weather API. The app fetches information in a JSON format and displays sunset time, humidity, pressure, speed of the location. Styled using HTML, CSS. Dynamic display of the data fetched from the json file using useState hook.
+  - name: "Music Player App"
     git_url:
-    description: Suspendisse a tincidunt odio. Suspendisse posuere luctus aliquet. Quisque magna tellus, tempor vitae arcu sed, volutpat scelerisque lacus. Aliquam varius pulvinar dapibus. Ut a tincidunt sem. Aenean sollicitudin fringilla erat ut imperdiet. Phasellus fermentum, enim vitae laoreet elementum, eros nisl hendrerit lorem.
+    description: Created music player application made using Core Java that can play music and add songs to the album, and create playlists, allows the user to add songs to the playlist from the album allowing the user to add and delete songs from the playlist. The user can play the next, previous and repeat the song using the options. Implemented method overloading where user can add song through title and track number. The application is made utilizing the Object-Oriented Methodologies.
 
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
@@ -81,15 +81,15 @@ professional_experience:
   #Write your Jarvis role as a professional experience rather than training.
   - title: "Software Developer"
     company: "Jarvis"
-    duration: "2020-present"
+    duration: "2023-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Donec mattis sed justo et sagittis. Vestibulum lacinia nulla ipsum. Curabitur imperdiet nibh vitae leo lacinia laoreet. Nullam accumsan, lectus ut maximus ultricies, augue justo egestas mi, vel bibendum felis."
-  - title: "Tutor"
-    company: "XYZ Company"
-    duration: "2019"
-    description: "Donec mattis sed justo et sagittis. Vestibulum lacinia nulla ipsum. Curabitur imperdiet nibh vitae leo lacinia laoreet. Nullam accumsan, lectus ut maximus ultricies, augue justo egestas mi, vel bibendum felis."
+    description: "Working as a Software Developer Trainee, creating Core Java Applications using Object-Oriented Programming methodologies, developing, debugging, testing code and designing interfaces, RDBMS/SQL. Implementing Agile and Scrum methodologies."
+  - title: "Web Developer Intern"
+    company: "Cubiccode Digital Media, India"
+    duration: "2019-2020"
+    description: "Worked on wireframing and UI design of the web pages using Figma. Design and create optimized landing pages in HTML5 and CSS. Worked on designing specifi cally the header section of the website."
 
-#List of edcuation
+#List of education
 education: 
   - school_name: "KLS Gogte Institute of Technology - Karnataka, India"
     duration: "2015-2019"
@@ -111,11 +111,11 @@ others:
   - title: "Certificates"
     #list of items
     bullets:
-      - "Udacity Machine Learning (2019)"
+      - "Web Development Certification"
   - title: "Awards"
     bullets:
-      - "Winner"
+      - "Reading Books"
   - title: "Activities/Hobbies"
     bullets:
       - "Skating"
-      - "Competitive gaming"
+      - "Competitive Gaming"
