Updated Jarvis Profile

--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -29,7 +29,7 @@ skills:
     - Docker
     - C# .Net
     - REST API
-    - Web Designing
+    - Web Designing/Photoshop
     - Bootstrap/Material UI
 
 # List of Jarvis projects
@@ -87,7 +87,7 @@ professional_experience:
   - title: "Web Developer Intern"
     company: "Cubiccode Digital Media, India"
     duration: "2019-2020"
-    description: "Worked on wireframing and UI design of the web pages using Figma. Design and create optimized landing pages in HTML5 and CSS. Worked on designing specifi cally the header section of the website."
+    description: "Developed Prototypes, mockups, wireframes, and UI designs of the web pages using Photoshop and Figma. Design and create optimized landing pages in HTML5 and CSS3. Worked on designing specifically the header section of the website."
 
 #List of education
 education: 
