Profile updated after review

--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,7 +5,7 @@ github_repo_root_url: https://github.com/Jarvis-Consulting-Group/jarvis_data_eng
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: I am a Computer Science Engineering graduate from Visvesvaraya Technological University (VTU) with a post-graduate Web Design and development certificate from Conestoga College. Implemented Object-Oriented Programming methodologies in Java Programming, developing, debugging, and testing code using IntelliJ IDEA. I worked as a Web Developer intern at a startup where I Developed Prototypes and wireframes using Photoshop and Figma and translated the designs into code with VS-Code. I have good experience working in Scrum and Agile environments. Ability to self-motivate with a strong desire to learn, adapt and master new technologies and work in a team and self-directed settings.
+summary: I am a Computer Science Engineering graduate from Visvesvaraya Technological University (VTU) with a post-graduate Web Design and Development certificate from Conestoga College. My expertise lies in implementing object-oriented programming methodologies in Java, including developing, debugging, and testing code. I have a solid understanding of various programming languages, such as javascript and python. I worked as a Web Developer intern, where I successfully created prototypes, mockups and wireframes using tools like Photoshop and Figma, translating designs into functional code. I possess valuable experience working in Agile and Scrum environments, enabling efficient collaboration and adaptability. I am highly self-motivated, with a solid drive to continuously learn, adapt, and master new technologies. I thrive both in team-oriented and self-directed settings.
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
@@ -13,23 +13,23 @@ skills:
   # At least 5 skills
   proficient:
     - Java
-    - OOP
+    - Javascript
     - Linux/Bash
     - Agile/Scrum
     - Git/Github
   # At least 5 skills
   competent:
-    - Data Structures
-    - SQL
-    - Node.js
+    - SQL/RDBMS
+    - Docker
+    - Web Designing/Photoshop
     - React
     - HTML5/CSS3
   # At least 5 skills
   familiar:
-    - Docker
-    - C# .Net
+    - Python
+    - C#
     - REST API
-    - Web Designing/Photoshop
+    - Node.js
     - Bootstrap/Material UI
 
 # List of Jarvis projects
@@ -38,28 +38,28 @@ jarvis_projects:
     git_url: "https://github.com/Jarvis-Consulting-Group/jarvis_data_eng-samarthghadi/tree/master/linux_sql"
     # The project description allows hiring managers to understand your project and technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Implemented a Monitoring Agent tool for the LCA team to track the hardware specifications and software utilization like memory/CPU management and generate reports with the help of the data saved in the database. This tool is developed using Bash Scripts, PostgreSQL, PSQL Client Tool, Docker, and Crontab.
-  - name: "Core Java Apps"
-    git_url: "/core_java"
-    description:
-      - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "JDBC App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-      - "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-  - name: "Springboot App"
-    git_url: "/springboot"
-    description: ""
-  - name: "Python Data Analytics"
-    git_url: "/python_data_anlytics"
-    description: ""
-  - name: "Hadoop"
-    git_url: "/hadoop"
-    description: ""
-  - name: "Spark"
-    git_url: "/spark"
-    description: ""
-  - name: "Cloud/DevOps"
-    git_url: "/cloud_devops"
-    description: ""
+    description: Implemented a Linux monitoring tool for the Linux cluster administration (LCA) team, enabling real-time monitoring and recording of hardware and software usage across a group of Linux systems. The servers are connected through a switch. The tool collects data on hardware specifications and software utilization, including memory and CPU management. Programmed with bash scripts, automated crontab every minute for data collection, and stored into a dockerized PostgreSQL database. These reports provide valuable insights for the LCA team to decide whether to increase hardware or software specifications for the future. Git was chosen as the version control system to efficiently manage the codebase efficiently, ensuring versioning and collaboration among the team.
+  #- name: "Core Java Apps"
+   # git_url: "/core_java"
+   # description:
+    #  - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+     # - "JDBC App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+      #- "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+  #- name: "Springboot App"
+   # git_url: "/springboot"
+    #description: ""
+  #- name: "Python Data Analytics"
+  #  git_url: "/python_data_anlytics"
+  #  description: ""
+  #- name: "Hadoop"
+  #  git_url: "/hadoop"
+  #  description: ""
+  #- name: "Spark"
+  #  git_url: "/spark"
+  #  description: ""
+  #- name: "Cloud/DevOps"
+  #  git_url: "/cloud_devops"
+  #  description: ""
 
 # List of personal or academic projects
 # Feel free to add more projects
@@ -69,10 +69,10 @@ highlighted_projects:
     #URL is optional
     git_url: ""
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: Designed UI with React.js in VS-Code. Using an application programming interface (API) to develop this app. Using an API to access weather data. Allows you to make a search for the current weather by simply typing cities. This application displays the weather forecast using an external weather API. The app fetches information in a JSON format and displays sunset time, humidity, pressure, speed of the location. Styled using HTML, CSS. Dynamic display of the data fetched from the json file using useState hook.
+    description: Developed a Weather app utilizing an application programming interface (API) to create an app that provides weather data. The app allows users to search for the current weather by simply entering city names. It accesses weather data through an external weather API. The app fetches information in JSON format, displaying details such as sunset time, humidity, pressure, and location speed. The UI is styled using HTML, CSS, and React.js, with the data fetched from the JSON file dynamically displayed using the useState hook. This app provides a user-friendly interface to access and visualize weather forecasts, enhancing the user experience with real-time weather information.
   - name: "Music Player App"
     git_url:
-    description: Created music player application made using Core Java that can play music and add songs to the album, and create playlists, allows the user to add songs to the playlist from the album allowing the user to add and delete songs from the playlist. The user can play the next, previous and repeat the song using the options. Implemented method overloading where user can add song through title and track number. The application is made utilizing the Object-Oriented Methodologies.
+    description: Music player app developed using Java is a comprehensive application that allows users to play music, manage albums, create playlists, and control playback options. The application enables users to add songs to their album library and create custom playlists by adding or deleting songs. It incorporates features like playing the next or previous track and repeating songs. The project follows object-oriented principles, utilizing concepts like encapsulation, inheritance, and method overloading. The Java-based music player provides a user-friendly interface, offering a seamless music playback experience with efficient organization and management of music collections.
 
 #List of professional experience
 #The job description allows hiring managers to understand your job and the technologies you used(e.g. programming languages, libraries, algorithms, hardware, tools, etc.).
@@ -83,11 +83,11 @@ professional_experience:
     company: "Jarvis"
     duration: "2023-present"
     # The project description must start with an action verb (https://bit.ly/3guO98u)
-    description: "Working as a Software Developer Trainee, creating Core Java Applications using Object-Oriented Programming methodologies, developing, debugging, testing code and designing interfaces, RDBMS/SQL. Implementing Agile and Scrum methodologies."
+    description: "Working as a Software Developer trainee, I am actively involved in creating Java applications using Core Java concepts, RDBMS/SQL, JDBC, and Maven. I work in an Agile Scrum environment, following appropriate software development life cycle (SDLC) practices. My role includes deploying applications and ensuring their successful implementation. I continuously learn and apply industry best practices to deliver high-quality software solutions. With a focus on teamwork and collaboration, I actively contribute to the Agile Scrum process, taking part in sprint planning, daily stand-ups, and sprint reviews."
   - title: "Web Developer Intern"
     company: "Cubiccode Digital Media, India"
     duration: "2019-2020"
-    description: "Developed Prototypes, mockups, wireframes, and UI designs of the web pages using Photoshop and Figma. Design and create optimized landing pages in HTML5 and CSS3. Worked on designing specifically the header section of the website."
+    description: "I interned as a web developer, working on JavaScript throughout the web application development lifecycle. I was responsible for designing and creating highly optimized landing pages using HTML and CSS that aligned with the company's requirements. Additionally, I made wireframes, mockups and UI designs using tools like Photoshop and Figma. Collaborating closely with back-end developers, I ensured seamless front-end and back-end code integration while maintaining design integrity. I took sole ownership in developing e-commerce websites and web applications using WordPress using woo-commerce. Furthermore, I specialized in designing the landing pages of websites."
 
 #List of education
 education: 
@@ -111,11 +111,11 @@ others:
   - title: "Certificates"
     #list of items
     bullets:
-      - "Web Development Certification"
+      - "Udemy Web Development Certification"
   - title: "Awards"
     bullets:
-      - "Reading Books"
+      - "Reading motivational books"
   - title: "Activities/Hobbies"
     bullets:
-      - "Skating"
-      - "Competitive Gaming"
+      - "Love Roller Skating"
+      - "Competitive Gaming(Mobile Legends, PUBG)"
