--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -5,15 +5,17 @@ github_repo_root_url: https://github.com/Jarvis-Consulting-Group/jarvis_data_eng
 
 # Introduce yourself, your academic and professional background.
 # What excites you about the software industry and your passion. At least 80 words
-summary: I am a Computer Science Engineering graduate from Visvesvaraya Technological University (VTU) with a post-graduate Web Design and Development certificate from Conestoga College. My expertise lies in implementing object-oriented programming methodologies in Java, including developing, debugging, and testing code. I have a solid understanding of various programming languages, such as javascript and python. I worked as a Web Developer intern, where I successfully created prototypes, mockups and wireframes using tools like Photoshop and Figma, translating designs into functional code. I possess valuable experience working in Agile and Scrum environments, enabling efficient collaboration and adaptability. I am highly self-motivated, with a solid drive to continuously learn, adapt, and master new technologies. I thrive both in team-oriented and self-directed settings.
+summary: I am a Computer Science Engineering graduate from Visvesvaraya Technological University (VTU) with a post-graduate Web Design and Development certificate from Conestoga College. My expertise lies in implementing object-oriented programming methodologies in JavaScript/TypeScript, including developing, debugging, and testing code. I have a solid understanding of various programming languages, such as java and python. I worked as a Web Developer intern, where I successfully created prototypes, mockups and wireframes using tools like Photoshop and Figma, translating designs into functional code. I possess valuable experience working in Agile and Scrum environments, enabling efficient collaboration and adaptability. I am highly self-motivated, with a solid drive to continuously learn, adapt, and master new technologies. I thrive both in team-oriented and self-directed settings.
 
 # Group your skills by level.
 # Your skills can be anything software related (e.g. language, frameworks, methodologies, software, etc.).
 skills:
   # At least 5 skills
   proficient:
+    - JavaScript
+    - Angular
+    - Node/Express
     - Java
-    - Javascript
     - Linux/Bash
     - Agile/Scrum
     - Git/Github
@@ -27,7 +29,7 @@ skills:
   # At least 5 skills
   familiar:
     - Python
-    - C#
+    - Jest/Cypress
     - REST API
     - Node.js
     - Bootstrap/Material UI
