--- a/profile/profile.yaml
+++ b/profile/profile.yaml
@@ -43,9 +43,11 @@ jarvis_projects:
     description: Implemented a Linux monitoring tool for the Linux cluster administration (LCA) team, enabling real-time monitoring and recording of hardware and software usage across a group of Linux systems. The servers are connected through a switch. The tool collects data on hardware specifications and software utilization, including memory and CPU management. Programmed with bash scripts, automated crontab every minute for data collection, and stored into a dockerized PostgreSQL database. These reports provide valuable insights for the LCA team to decide whether to increase hardware or software specifications for the future. Git was chosen as the version control system to manage the code efficiently, ensuring versioning and collaboration among the team.
   - name: "Core Java Apps"
     git_url: "https://github.com/Jarvis-Consulting-Group/jarvis_data_eng-samarthghadi/tree/master/core_java"
-    description: JDBC App - Developed a 'Customer Order Processing System' utilizing JDBC, DAO(Data Access Object), and DTO(Data Transfer Object) design patterns. The system interacts with PostgreSQL via JDBC, supporting CRUD operations and benefiting from JDBC's cross-platform compatibility. PSQL Client Tool and DBeaver were employed for database management, while Maven streamlined dependencies. The system's architecture includes a PostgreSQL container facilitated by Docker. IntelliJ served as the IDE for development. This setup ensures seamless access to relational databases. The system excels in processing customer orders, offering read, write, update, and delete functions for RDBMS data manipulation.
+    description:
+    -  "JDBC App: Developed a 'Customer Order Processing System' utilizing JDBC, DAO(Data Access Object), and DTO(Data Transfer Object) design patterns. The system interacts with PostgreSQL via JDBC, supporting CRUD operations and benefiting from JDBC's cross-platform compatibility. PSQL Client Tool and DBeaver were employed for database management, while Maven streamlined dependencies. The system's architecture includes a PostgreSQL container facilitated by Docker. IntelliJ served as the IDE for development. This setup ensures seamless access to relational databases. The system excels in processing customer orders, offering read, write, update, and delete functions for RDBMS data manipulation."
+    -  "Grep App: A program that simulates the Linux grep command searching for a specified text pattern in an input file."
     #  - "Twitter App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
-    #- "Grep App: Curabitur laoreet tristique leo, eget suscipit nisi. Sed in sodales ex. Maecenas vitae tincidunt dui, et eleifend quam."
+    
 
 
   #- name: "Springboot App"
@@ -117,8 +119,8 @@ others:
       - "Udemy Web Development Certification"
   - title: "Awards"
     bullets:
-      - "Reading motivational books"
+      - "Exploring motivational literature to foster personal growth, currently enjoying 'Excuses'"
   - title: "Activities/Hobbies"
     bullets:
-      - "Love Roller Skating"
-      - "Competitive Gaming(Mobile Legends, PUBG)"
+      - "Participated in National level Roller Skating Championship"
+
